[project]
name = "linhof-misc"
version = "0.1.0"
description = "Miscellaneous tools to generate 3D printing models for Linhof parts."
requires-python = ">=3.11"
dependencies = [
    "bd-warehouse",
    "build123d>=0.9.2.dev119",
    "cadquery>=2.3.0",
]

[tool.uv]
package = false

[tool.uv.sources]
cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
build123d = { git = "https://github.com/gumyr/build123d.git", rev = "dev" }
bd-warehouse = { git = "https://github.com/gumyr/bd_warehouse" }

